test/should-fail/缺少endfunction.j
function test takes nothing returns nothing

function test2 takes nothing returns nothing
endfunction